# Openfhe_PE

./: CMakeLists.txt  LICENSE  description.txt  readme.md
python_model/: HCNN.py  resnet-12.py  resnet-18-8.py  resnet-18.py
python_model/histories/: events.out.tfevents.1745809009.bill-Alienware-Aurora-R7.15918.0  events.out.tfevents.1745809023.bill-Alienware-Aurora-R7.15965.0  events.out.tfevents.1745809198.bill-Alienware-Aurora-R7.16151.0  events.out.tfevents.1745809634.bill-Alienware-Aurora-R7.16328.0  events.out.tfevents.1745809692.bill-Alienware-Aurora-R7.16426.0  events.out.tfevents.1745810066.bill-Alienware-Aurora-R7.16531.0  events.out.tfevents.1745811198.bill-Alienware-Aurora-R7.16766.0  events.out.tfevents.1745811292.bill-Alienware-Aurora-R7.17047.0  events.out.tfevents.1745811467.bill-Alienware-Aurora-R7.17301.0  events.out.tfevents.1745812117.bill-Alienware-Aurora-R7.17782.0  events.out.tfevents.1745897392.bill-Alienware-Aurora-R7.33046.0
python_model/saved_models/HCNN/: HCNN-square-0427-best.pt  conv1.0.bias.npy  conv1.0.weight.npy  conv2.0.weight.npy  conv2.1.bias.npy  conv2.1.running_mean.npy  conv2.1.running_var.npy  conv3.1.bias.npy  conv3.1.running_mean.npy  conv3.1.weight.npy  fc1.weight.npy  fc2.bias.npy
python_model/saved_models/ResNet-18/parameters/: bn1_bias.npy  bn1_running_mean.npy  bn1_running_var.npy  bn1_weight.npy  conv1_weight.npy  fc_bias.npy  fc_weight.npy  layer1_0_bn1_bias.npy  layer1_0_bn1_running_mean.npy  layer1_0_bn1_running_var.npy  layer1_0_bn1_weight.npy  layer1_0_bn2_bias.npy  layer1_0_bn2_running_mean.npy  layer1_0_bn2_running_var.npy  layer1_0_bn2_weight.npy  layer1_0_conv1_weight.npy  layer1_0_conv2_weight.npy  layer1_1_bn1_bias.npy  layer1_1_bn1_running_mean.npy  layer1_1_bn1_running_var.npy  layer1_1_bn1_weight.npy  layer1_1_bn2_bias.npy  layer1_1_bn2_running_mean.npy  layer1_1_bn2_running_var.npy  layer1_1_bn2_weight.npy  layer1_1_conv1_weight.npy  layer1_1_conv2_weight.npy  layer2_0_bn1_bias.npy  layer2_0_bn1_running_mean.npy  layer2_0_bn1_running_var.npy  layer2_0_bn1_weight.npy  layer2_0_bn2_running_mean.npy  layer2_0_bn2_running_var.npy  layer2_0_bn2_weight.npy  layer2_0_conv1_weight.npy  layer2_0_conv2_weight.npy  layer2_0_downsample_0_weight.npy  layer2_0_downsample_1_bias.npy  layer2_0_downsample_1_running_mean.npy  layer2_0_downsample_1_running_var.npy  (+60 more)
python_model/saved_models/ResNet-8/: resnet18_from_layer3.0_meta.json
python_model/saved_models/parameters/: conv1.0.bias.npy  conv1.0.weight.npy  conv1.1.bias.npy  conv1.1.running_mean.npy  conv1.1.running_var.npy  conv1.1.weight.npy  conv2.0.bias.npy  conv2.0.weight.npy  conv2.1.bias.npy  conv2.1.weight.npy  conv3.0.bias.npy  conv3.0.weight.npy  conv3.1.bias.npy  conv3.1.running_var.npy  conv3.1.weight.npy  fc1.bias.npy  fc1.weight.npy  fc2.bias.npy  fc2.weight.npy
results/1024/: blk2_10x10_1024.txt  blk2_15x15_1024.txt  blk2_20x20_1024.txt  blk2_5x5_1024.txt  upto_layer1_10x10_1024.txt  upto_layer1_15x15_1024.txt  upto_layer1_20x20_1024.txt  upto_layer1_5x5_1024.txt
results/512/: 512_5x5.txt
results/resnet-last/: test_boot10x10.txt  test_boot2x2.txt  test_boot5x5.txt  test_relu10x10.txt  test_relu28x28.txt  test_relu2x2.txt  test_relu5x5.txt  test_result.txt  test_result10x10.txt  test_result28x28.txt  test_result2x2.txt  test_result5x5.txt
src/: main.cpp
src/cnn/: activation.cpp  activation.hpp  bootstrap.cpp  bootstrap.hpp  conv2d.cpp  conv2d.hpp  layer.cpp  layer.hpp  linear.cpp  linear.hpp  model.cpp  model.hpp  pool.cpp  pool.hpp  region_update.cpp  region_update.hpp
src/encryption/: encryption.cpp  encryption.hpp
src/include/: cmdline.h
src/utils/: Resnet-18.txt  dataloader.cpp  dataloader.hpp  globals.cpp  globals.hpp  helper.cpp  helper.hpp  types.hpp
tests/: aff_conv.cpp  aff_test  libtorch_test.cpp  test_ring_dimension.cpp  verify_py.py
tests/innerproduct/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  innerproduct.cpp  test
